# License_Plate_Detection

./: .gitignore  .gitlab-ci.yml  README.txt  requirements.in  requirements.txt  setup.cfg  setup.py
src/Stabilization/: kalman.py  stb.py  test_stb.py  tracker.py
src/detect_pedestrians/: pedestrianrec.py  test_pr.py
src/detect_pedestrians/test_imgs/: person_01.csv  person_02.csv  person_03.csv  person_04.csv  person_05.csv
src/detect_platings/: detect_platings.py  detect_test.py
src/gui/: .coverage  gui.py  report.xml  test_gui.py
src/ocr/: generate_cnn.py  label_data.py  ocr.py  test_ocr.py
src/ocr/cnn.model/: saved_model.pb
src/ocr/cnn.model/variables/: variables.data-00000-of-00002  variables.index
