[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[flake8]
max-line-length=100

[mypy]
ignore_missing_imports = True

[pylint.format]
max-line-length=100
[pylint.master]
extension-pkg-whitelist=PySide2, cv2
generated-members=ocr.*


[tool:pytest]
addopts =
  -v
  --flake8
  --mypy
  --pylint
  --cov=src
  --cov-branch
  --cov-report=html
  --cov-report=term
  --no-cov-on-fail
  --junitxml=report.xml

junit_family=xunit2
